--- a/conf/base/parameters.yml
+++ b/conf/base/parameters.yml
@@ -3,7 +3,9 @@ visualize:
   plotly_sample: 50000
   show: true
 optimize:
-  methods: [scipy:SLSQP, monte carlo]
+  methods: 
+    - scipy:SLSQP
+    - monte carlo
   scipy_solver: SLSQP
   optimize_on: Adj Close
   monte_carlo_n_iters: 1000
