[visualize_investment] Added visualization to visualize investment portfolio, cleaned up formatting

--- a/conf/base/parameters.yml
+++ b/conf/base/parameters.yml
@@ -2,10 +2,13 @@
 visualize:
   plotly_sample: 50000
   show: true
+  forecast_initial_investment: 100000
+  forecast_n_years: 5
 optimize:
   methods: 
     - scipy:SLSQP
     - monte carlo
+  optimize_for: Sharpe Ratio
   optimize_on: Adj Close
   subtract_risk_free: true
 data:
