--- a/conf/base/parameters.yml
+++ b/conf/base/parameters.yml
@@ -10,7 +10,7 @@ optimize:
   solvers: 
     - SLSQP
   optimize_for: Sharpe Ratio
-  optimize_on: Adj Close
+  optimize_on: Close
   min_weight: 0.0001
   subtract_risk_free: true
 simulate:
@@ -37,7 +37,7 @@ data:
     start_date: "2021-01-01"
     end_date: "2024-01-01"
     period: daily
-    compute_pct_change_on: Adj Close
+    compute_pct_change_on: Close
     symbols:
       - NASDAQ:MSFT # Microsoft
       - NASDAQ:IBM # International Business Machines
